--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
-body{
-    background-color: rgba(137, 43, 226, 0.822);
+header {
+    background-color: #424e61;
+    color: white
 }
+.cabecalho-imagem{
+    width: 20%;
+}
+    
