--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+*{
+    *{
+        margin: 0;
+        padding: 0;
+    }
+}
+
 .cabecalho {
-    background-color: #424e61;
-    color: white
-    display: flex;
-    justify-content: space-around;
+    .cabecalho {
+        background-color: #424E61;
+        color: white;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 24px 0;
+    }
 }
 
 .cabecalho-imagem {
